# course_shop

./: .env  .flake8  README.md  pyproject.toml
.github/workflows/: flake8_check.yml
my_shop/: config.py  main.py
my_shop/core/handlers/: basic.py
